--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,9 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:navigationBarColor">@color/black</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="fontFamily">@font/montserrat_extrabold</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="Theme.SportQuiz.Splash" parent="Theme.AppCompat.Light.NoActionBar">
