--- a/app/src/main/res/color/black_selector.xml
+++ b/app/src/main/res/color/black_selector.xml
@@ -4,5 +4,7 @@
         android:color="@color/white"/>
     <item android:state_focused="true"
         android:color="@color/white"/>
+    <item android:state_checked="true"
+        android:color="@color/white"/>
     <item android:color="@color/black"/>
 </selector>
