Added three difficulty levels of quizzes and the quiz itself

--- a/app/src/main/res/layout/view_exit_dialog.xml
+++ b/app/src/main/res/layout/view_exit_dialog.xml
@@ -12,10 +12,10 @@
         android:layout_marginStart="@dimen/horizontal_margin"
         android:layout_marginEnd="@dimen/horizontal_margin"
         android:layout_marginBottom="@dimen/center_vertical_margin"
-        android:text="@string/install_wallpaper"
+        android:text="@string/interrupt_the_quiz"
         android:textSize="@dimen/header_size"/>
     <Button
-        android:id="@+id/button_install"
+        android:id="@+id/button_exit"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
@@ -23,7 +23,7 @@
         android:layout_marginEnd="@dimen/horizontal_margin"
         android:layout_marginBottom="@dimen/item_vertical_margin"
         android:background="@drawable/bg_corner_light_grey_small"
-        android:text="@string/install"
+        android:text="@string/yes"
         android:textColor="@color/dark_grey"
         android:fontFamily="@font/montserrat_bold" />
 
