--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -32,7 +33,7 @@
         android:layout_marginStart="@dimen/horizontal_margin"
         android:layout_marginEnd="@dimen/horizontal_margin"
         android:layout_marginBottom="@dimen/bottom_vertical_margin"
-        android:background="@drawable/dg_corner_light_grey"
+        android:background="@drawable/bg_corner_light_grey_small"
         android:text="@string/home"
         android:textColor="@color/dark_grey"
         android:fontFamily="@font/montserrat_bold" />
