--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
     <RelativeLayout
         android:id="@+id/header"
@@ -18,7 +19,6 @@
             android:background="@color/white"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_exit"/>
-
         <TextView
             android:id="@+id/text_timer"
             android:layout_width="wrap_content"
@@ -41,13 +41,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/view_button"
+        android:layout_above="@+id/recycler"
         android:layout_below="@+id/header"
         android:layout_marginStart="@dimen/horizontal_margin"
         android:layout_marginEnd="@dimen/horizontal_margin"
         android:layout_marginTop="@dimen/center_vertical_margin"
         android:layout_marginBottom="@dimen/item_vertical_margin">
         <TextView
+            android:id="@+id/text_question"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -56,7 +57,7 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/view_button"
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
